# classic-mac-hardware-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/classic_mac_hardware/: __init__.py  server.py
